--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "test": "ng test",
         "lint": "ng lint",
         "e2e": "ng e2e",
-        "postinstall": "ng build --aot -prod"
+        "postinstall": "ng build -prod"
     },
     "private": true,
     "dependencies": {
@@ -22,10 +22,9 @@
         "@angular/platform-browser-dynamic": "^6.1.0",
         "@angular/router": "^6.1.0",
         "core-js": "^2.5.4",
-        "express": "^4.16.3",
-        "path": "^0.12.7",
         "rxjs": "~6.2.0",
-        "zone.js": "~0.8.26"
+        "zone.js": "~0.8.26",
+        "typescript": "~2.9.2"
     },
     "devDependencies": {
         "@angular-devkit/build-angular": "~0.8.0",
@@ -36,7 +35,6 @@
         "@types/jasminewd2": "~2.0.3",
         "@types/node": "~8.9.4",
         "codelyzer": "~4.3.0",
-        "enhanced-resolve": "^4.1.0",
         "jasmine-core": "~2.99.1",
         "jasmine-spec-reporter": "~4.2.1",
         "karma": "~3.0.0",
@@ -48,5 +46,9 @@
         "ts-node": "~7.0.0",
         "tslint": "~5.11.0",
         "typescript": "~2.9.2"
+    },
+    "engines": {
+        "node": "8.11.3",
+        "npm": "5.6.0"
     }
 }
