--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
         "@angular/router": "^6.1.0",
         "boostrap": "^2.0.0",
         "core-js": "^2.5.4",
+        "firebase": "^5.5.5",
+        "ngx-cookie-service": "^1.0.10",
         "rxjs": "~6.2.0",
         "typescript": "~2.9.2",
         "zone.js": "~0.8.26"
