--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
         "@fortawesome/angular-fontawesome": "^0.3.0",
         "@fortawesome/fontawesome-svg-core": "^1.2.7",
         "@fortawesome/free-solid-svg-icons": "^5.4.2",
+        "angularfire2": "^5.1.0",
         "boostrap": "^2.0.0",
         "core-js": "^2.5.4",
-        "firebase": "^5.5.5",
         "moment": "^2.22.2",
         "ngx-cookie-service": "^1.0.10",
         "rxjs": "~6.2.0",
@@ -37,12 +37,14 @@
         "@angular-devkit/build-angular": "^0.8.0",
         "@angular/cli": "~6.2.3",
         "@angular/compiler-cli": "^6.1.8",
+        "@angular/fire": "^5.1.0",
         "@angular/language-service": "^6.1.0",
         "@types/jasmine": "~2.8.8",
         "@types/jasminewd2": "~2.0.3",
         "@types/jquery": "^3.3.22",
         "@types/node": "~8.9.4",
         "codelyzer": "~4.3.0",
+        "firebase": "^5.5.7",
         "fullcalendar": "^3.9.0",
         "jasmine-core": "~2.99.1",
         "jasmine-spec-reporter": "~4.2.1",
